tests/samples/negative/traits/trait_impl_unknown_qualified_trait.ax
module trait_impl_unknown_qualified_trait;

import samplelib.traits as traits;

struct File {
    value: i32;
}

impl traits.Missing for File {
    fn read(self: &File) -> i32 {
        return 0;
    }
}

fn main() -> i32 {
    return 0;
}
